--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "zordius/lightncandy": "dev-master"
     },
     "require-dev": {
-        "slim/slim": "dev-develop",
-        "phpunit/phpunit": "*"
+        "slim/slim": "^3.0.0",
+        "phpunit/phpunit": "4.6.0"
     },
     "autoload": {
         "psr-4": {
